XMLExper/m12/m12_463_1_tinyxml2/comparisono.txt
tinyxml2.cpp: In member function ‘const char* tinyxml2::XMLElement::GetText() const’:
tinyxml2.cpp:1707:60: error: cannot dynamic_cast ‘node’ (of type ‘const class tinyxml2::XMLNode*’) to type ‘class tinyxml2::XMLComment*’ (conversion casts away constness)
 1707 |             /*PCI*/dynamic_cast<tinyxml2::XMLComment*>(node) = node->NextSibling();
      |                                                            ^
diff: tinyxml2.o: No such file or directory
